--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "markdown.extension.toc.levels": "1..3"
+  "markdown.extension.toc.levels": "1..3",
+  "sqltools.connections": [
+    {
+        "previewLimit": 50,
+        "driver": "SQLite",
+        "name": "Local SQLite",
+        "database": "./config/db/db.sqlite3"
+    }
+],
+"sqltools.useNodeRuntime": true,
 }
