--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "@types/node": "^14.0.27",
     "coveralls": "^3.1.0",
     "jest": "^26.4.0",
+    "sqlite3": "^5.0.2",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.38"
   }
 }
