--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,29 @@
   "markdown.extension.toc.levels": "1..3",
   "sqltools.connections": [
     {
-        "previewLimit": 50,
-        "driver": "SQLite",
-        "name": "Local SQLite",
-        "database": "./config/db/db.sqlite3"
+      "previewLimit": 50,
+      "driver": "SQLite",
+      "name": "Local SQLite",
+      "database": "./config/db/db.sqlite3"
     }
-],
-"sqltools.useNodeRuntime": true,
+  ],
+  "sqltools.useNodeRuntime": true,
+  "eslint.validate": [
+    "javascript",
+    "typescript"
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.formatOnSave": true,
+  "[javascript]": {
+    "editor.formatOnSave": false,
+  },
+  "[typescript]": {
+    "editor.formatOnSave": false,
+  },
+  "[json]": {
+    "files.insertFinalNewline": true
+  },
+  "typescript.tsdk": "node_modules/typescript/lib",
 }
