--- a/package.json
+++ b/package.json
@@ -29,17 +29,26 @@
   "author": "scambier",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.161",
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.17.27",
     "coveralls": "^3.1.0",
-    "jest": "^26.4.0",
+    "jest": "^27.2.5",
     "sqlite3": "^5.0.2",
-    "ts-jest": "^26.2.0",
-    "typescript": "^3.9.7"
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.20",
+    "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.38"
   }
