--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compileOnSave": true,
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "test/**/*",
   ],
   "compilerOptions": {
     /* Basic Options */
