--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "markov-strings",
-  "version": "3.0.1",
+  "name": "markov-strings-db",
+  "version": "4.0.0",
   "description": "A Markov string generator",
   "main": "dist/index.js",
   "files": [
@@ -8,8 +8,9 @@
   ],
   "scripts": {
     "start": "tsc --watch",
-    "build": "tsc",
-    "test": "jest --coverage"
+    "build": "rimraf dist && tsc",
+    "test": "jest --coverage",
+    "lint": "tsc --noEmit && eslint **/*.ts"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -34,6 +35,7 @@
     "@types/node": "^14.17.27",
     "coveralls": "^3.1.0",
     "jest": "^27.2.5",
+    "rimraf": "^3.0.2",
     "sqlite3": "^5.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
