--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,28 +4,20 @@ on:
       - develop
       - master
 
-name: Test Coveralls
+name: Unit tests
 
 jobs:
-
   build:
-    name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ '10', '12', '14', '16' ]
+    name: Node ${{ matrix.node }} sample
     steps:
-
-    - uses: actions/checkout@v1
-
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14.x
-
-    - name: npm install, make test-coverage
-      run: |
-        npm install
-        npm run test
-
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+      - run: npm ci
+      - run: npm test
