--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "markov-strings-db",
   "version": "4.0.0",
   "description": "A Markov string generator",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "files": [
-    "dist"
+    "dist/src"
   ],
   "scripts": {
     "start": "tsc --watch",
     "build": "rimraf dist && tsc",
     "test": "jest --coverage",
-    "lint": "tsc --noEmit && eslint **/*.ts"
+    "lint": "tsc --noEmit && eslint **/*.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10"
   },
   "repository": {
     "type": "git",
@@ -52,6 +53,7 @@
     "lodash": "^4.17.20",
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.3.1",
     "typeorm": "^0.2.38"
   }
 }
