--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,10 @@ on:
       - develop
       - master
 
-name: Unit tests
+name: Unit test and build
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,6 +18,19 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
+          cache: 'npm'
           node-version: ${{ matrix.node }}
       - run: npm ci
       - run: npm test
+  build:
+    runs-on: ubuntu-latest
+    name: Node ${{ matrix.node }} sample
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          cache: 'npm'
+          node-version: 14
+      - run: npm ci
+      - run: npm run build
