--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   "author": "scambier",
   "license": "MIT",
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.17.27",
     "coveralls": "^3.1.0",
+    "fs-extra": "^10.0.0",
     "jest": "^27.2.5",
     "rimraf": "^3.0.2",
     "sqlite3": "^5.0.2",
