--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - run: npm test
   build:
     runs-on: ubuntu-latest
-    name: Node ${{ matrix.node }} sample
+    name: Build package
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
